<resources>
    <string name="app_name">My Chat</string>
    <string name="HiLeo">Hi Lio. Whats up?? \n I need a new logo for group.</string>
    <string name="Simple">Simple , minimal and beautiful</string>
    <string name="Ok">OK, I`ll start next week. \n Send me documents today.</string>
    <string name="Oh">Oh. That`s great 😍 </string>
    <string name="_22_30">22:30</string>
    <string name="_22_31">22:31</string>
    <string name="_22_32">22:32</string>
    <string name="_22_33">22:33</string>
</resources>